# CUDA_OPERATOR

./: CMakeLists.txt  main.cu  readme.md
Notes/: GEMM.md  ImplicitGEMM.md
assets/: .~lock.GEMM优化完整稿.pptx#
cudnn/: conv.cc
include/: convs2d.h  gemm.h  operators.h  utils.h  verify.h
kernels/: GEMM  GEMM.cu  directConv2d.cc  im2colGEMM.cu  implGEMM.cu  implicit_gemm_conv_fp16  implicit_gemm_conv_fp16.cu
test/: test_GEMM.cu  test_im2col.cu  test_im2colGemm.cu  test_implicitGemm.cu
utils/: cuda_utils.cu  getopt.cpp
